--- a/settings/VSCode-Settings.json
+++ b/settings/VSCode-Settings.json
@@ -34,6 +34,10 @@
 			"other": "off"
 		}
 	},
+	"[terraform]": {
+		"editor.tabSize": 2,
+		"editor.defaultFormatter": "hashicorp.terraform"
+	},
 
 	// Python Formatting and Linter
 	"pylint.args": ["--disable=C0114,C0115,C0116"],
