--- a/settings/VSCode-Settings.json
+++ b/settings/VSCode-Settings.json
@@ -1,68 +1,149 @@
 {
-	// General Settings
-	"workbench.colorTheme": "One Dark Pro Darker",
-	"editor.fontFamily": "SourceCodePro+Powerline+Awesome",
-	"debug.console.fontFamily": "SourceCodePro+Powerline+Awesome",
-	"terminal.integrated.fontFamily": "Droid Sans Mono Awesome",
-	"editor.fontWeight": "500",
-	"terminal.integrated.fontWeight": "500",
-	"editor.fontSize": 14,
-	"debug.console.fontSize": 14,
-	"terminal.integrated.fontSize": 14,
-	"window.zoomLevel": 0,
-	"editor.quickSuggestionsDelay": 600,
-	"zenMode.centerLayout": false,
-	"zenMode.fullScreen": false,
-	"zenMode.hideLineNumbers": false,
-	"editor.minimap.enabled": false,
-	"workbench.settings.openDefaultSettings": true,
-	"workbench.settings.useSplitJSON": false,
-	// "workbench.settings.editor": "json",
-	"workbench.startupEditor": "newUntitledFile",
-    
-    // General Formatting
-	"editor.formatOnSave": false, // enable per language
-	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"prettier.useTabs": true,
-	"[shellscript]": {
-		"editor.defaultFormatter": "foxundermoon.shell-format"
-	},
-	"[plaintext]": {
-		"editor.quickSuggestions": {
-			"comments": "off",
-			"strings": "off",
-			"other": "off"
-		}
-	},
-	"[terraform]": {
-		"editor.tabSize": 2,
-		"editor.defaultFormatter": "hashicorp.terraform"
-	},
+  // ═══════════════════════════════════════════════════════════════════════════
+  // EDITOR & WORKBENCH
+  // ═══════════════════════════════════════════════════════════════════════════
+  "workbench.colorTheme": "One Dark Pro Darker",
+  "workbench.startupEditor": "newUntitledFile",
+  "workbench.settings.openDefaultSettings": true,
+  "workbench.settings.useSplitJSON": false,
+  // "workbench.settings.editor": "json",
+  "editor.minimap.enabled": false,
+  "editor.quickSuggestionsDelay": 600,
+  "editor.largeFileOptimizations": false,
+  "window.zoomLevel": 0,
+  "zenMode.centerLayout": false,
+  "zenMode.fullScreen": false,
+  "zenMode.hideLineNumbers": false,
 
-	// Python Formatting and Linter
-	"pylint.args": ["--disable=C0114,C0115,C0116"],
-	"[python]": {
-		"editor.defaultFormatter": "ms-python.black-formatter",
-		"editor.formatOnSave": true,
-		"editor.codeActionsOnSave": {
-			"source.organizeImports": "always"
-		}
-	},
-	"black-formatter.args": ["--line-length=99"],
+  // ═══════════════════════════════════════════════════════════════════════════
+  // FONTS
+  // ═══════════════════════════════════════════════════════════════════════════
+  "editor.fontFamily": "SourceCodePro+Powerline+Awesome",
+  "editor.fontWeight": "500",
+  "editor.fontSize": 14,
+  "debug.console.fontFamily": "SourceCodePro+Powerline+Awesome",
+  "debug.console.fontSize": 14,
+  "terminal.integrated.fontFamily": "Droid Sans Mono Awesome",
+  "terminal.integrated.fontWeight": "500",
+  "terminal.integrated.fontSize": 14,
 
-	// Indent Rainbow
-	// The indent color if the number of spaces is not a multiple of "tabSize".
-	"indentRainbow.errorColor": "rgba(128,32,32,0.6)",
-	// The indent color when there is a mix between spaces and tabs.
-	// To be disabled this coloring set this to an empty string.
-	"indentRainbow.tabmixColor": "rgba(128,32,96,0.6)",
-	"indentRainbow.excludedLanguages": ["plaintext"],
-	"indentRainbow.indicatorStyle": "light",
-	"indentRainbow.lightIndicatorStyleLineWidth": 2,
-	"indentRainbow.colors": [
-		"rgba(255,255,64,0.3)",
-		"rgba(127,255,127,0.3)",
-		"rgba(255,127,255,0.3)",
-		"rgba(79,236,236,0.3)"
-	],
+  // ═══════════════════════════════════════════════════════════════════════════
+  // TERMINAL
+  // ═══════════════════════════════════════════════════════════════════════════
+  "terminal.integrated.enableMultiLinePasteWarning": "never",
+
+  // ═══════════════════════════════════════════════════════════════════════════
+  // FORMATTING (GENERAL)
+  // ═══════════════════════════════════════════════════════════════════════════
+  "editor.formatOnSave": false, // enable per language
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "prettier.useTabs": true,
+  "diffEditor.ignoreTrimWhitespace": false,
+  // The indent color if the number of spaces is not a multiple of "tabSize".
+  "indentRainbow.errorColor": "rgba(128,32,32,0.6)",
+  // The indent color when there is a mix between spaces and tabs.
+  // To be disabled this coloring set this to an empty string.
+  "indentRainbow.tabmixColor": "rgba(128,32,96,0.6)",
+  "indentRainbow.excludedLanguages": ["plaintext"],
+  "indentRainbow.indicatorStyle": "light",
+  "indentRainbow.lightIndicatorStyleLineWidth": 2,
+  "indentRainbow.colors": [
+    "rgba(255,255,64,0.3)",
+    "rgba(127,255,127,0.3)",
+    "rgba(255,127,255,0.3)",
+    "rgba(79,236,236,0.3)"
+  ],
+
+  // ═══════════════════════════════════════════════════════════════════════════
+  // LANGUAGE-SPECIFIC FORMATTING
+  // ═══════════════════════════════════════════════════════════════════════════
+  "[shellscript]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  },
+  "[plaintext]": {
+    "editor.quickSuggestions": {
+      "comments": "off",
+      "strings": "off",
+      "other": "off"
+    }
+  },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[markdown]": {
+    "diffEditor.ignoreTrimWhitespace": true
+  },
+  "[terraform]": {
+    "editor.tabSize": 2,
+    "editor.defaultFormatter": "hashicorp.terraform"
+  },
+  "[dockercompose]": {
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2,
+    "editor.autoIndent": "advanced",
+    "editor.quickSuggestions": {
+      "other": true,
+      "comments": false,
+      "strings": true
+    },
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
+  "[github-actions-workflow]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
+
+  // ═══════════════════════════════════════════════════════════════════════════
+  // PYTHON
+  // ═══════════════════════════════════════════════════════════════════════════
+  "pylint.args": ["--disable=C0114,C0115,C0116", "--max-line-length=160"],
+  "python.analysis.extraPaths": ["src"],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "always"
+    },
+    "diffEditor.ignoreTrimWhitespace": true
+  },
+  "black-formatter.args": ["--line-length=99"],
+
+  // ═══════════════════════════════════════════════════════════════════════════
+  // GIT & VERSION CONTROL
+  // ═══════════════════════════════════════════════════════════════════════════
+  "git.confirmSync": false,
+
+  // ═══════════════════════════════════════════════════════════════════════════
+  // DOCKER
+  // ═══════════════════════════════════════════════════════════════════════════
+  "docker.extension.enableComposeLanguageServer": false,
+
+  // ═══════════════════════════════════════════════════════════════════════════
+  // GITHUB COPILOT
+  // ═══════════════════════════════════════════════════════════════════════════
+  "github.copilot.editor.enableAutoCompletions": true,
+  "github.copilot.nextEditSuggestions.enabled": true,
+  "github.copilot.enable": {
+    "*": true,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false
+  },
+
+  // ═══════════════════════════════════════════════════════════════════════════
+  // AI TOOLS & MCP
+  // ═══════════════════════════════════════════════════════════════════════════
+  "chat.mcp.discovery.enabled": {
+    "claude-desktop": true,
+    "windsurf": true,
+    "cursor-global": true,
+    "cursor-workspace": true
+  },
+  "gitlens.ai.model": "vscode",
+  "gitlens.ai.vscode.model": "copilot:gpt-4.1",
+  "claudeCode.preferredLocation": "panel",
+
+  // ═══════════════════════════════════════════════════════════════════════════
+  // PRIVACY & TELEMETRY
+  // ═══════════════════════════════════════════════════════════════════════════
+  "redhat.telemetry.enabled": false
 }
